# openloadhub

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  docker-compose.demo.yml  first-contribution.md  public-alpha-release-checklist.md
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: openloadhub-release-gates.yml
backend/: requirements-common.txt
backend/common/: README.md  __init__.py  pyproject.toml
backend/common/clients/: __init__.py
backend/common/config/: __init__.py  settings.py
backend/common/db/: __init__.py  database.py
backend/common/logging/: __init__.py
backend/common/models/: __init__.py  enums.py
backend/common/schemas/: __init__.py  alert_event.py  mixed_run_report.py  plan.py  report.py  run.py  script.py  task.py  task_asset.py
backend/common/utils/: __init__.py  s3_utils.py  time.py
backend/ptp-admin/: Dockerfile  alembic.ini  main.py  requirements-minimal.txt
backend/ptp-agent/: Dockerfile  main.py
backend/ptp-worker/: Dockerfile  README.md  celery_worker.py  requirements.txt
demo/target-service/: Dockerfile  hello.proto  requirements.txt  server.py
docker/: prometheus.demo.yml
docs/public/: CODE_OF_CONDUCT.md  FAQ.md  (+13 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
scripts/: run-opensource-demo-smoke.py  seed-public-demo.py  start-host-apps.sh  sync-openloadhub-labels.py
(+211 files in other folders)
